# ARPREC

./: AUTHORS  INSTALL  LICENSE.md  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  arprec-config  arprec-config.in  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
fortran/: Makefile  Makefile.am  Makefile.in  mp_mod.f  quadglobal.mod
include/: Makefile  Makefile.in
include/arprec/: arprec_config.h
m4/: ax_cxx_fma.m4  ax_fc_backslash_flag.m4
src/: Makefile  Makefile.am  Makefile.in  dotd.cpp  write.cpp
tests/: Makefile  Makefile.am  Makefile.in  compileExample.cpp  makeCompileExample  quad-readme
toolkit/: Makefile  Makefile.am  Makefile.in  mathinit.f  mathtool.f
